<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/black"
    android:orientation="vertical"
    android:id="@+id/recycler_view_item"
    >


    <TextView
        android:id="@+id/student_name_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:text="@string/student_name_detail_text"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/module_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:text="@string/module_detail_text"
        android:textColor="@color/yellow" />

    <TextView
        android:id="@+id/grade_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/grade_detail_text"
        android:textColor="@color/yellow" />
</RelativeLayout>