<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/loginFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="128dp"
        android:text="@string/title_login"
        android:textColor="@color/yellow"
        android:textSize="36sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp"
        android:outlineAmbientShadowColor="@color/yellow"
        android:outlineSpotShadowColor="@color/yellow"
        android:textColorHint="@color/yellow"
        app:boxStrokeColor="@color/yellow"
        app:passwordToggleEnabled="false"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_login_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username_login_hint"
            android:importantForAutofill="no"
            android:textColor="@color/yellow"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_login_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_login_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="128dp"
        android:outlineAmbientShadowColor="@color/yellow"
        android:textColorHint="@color/yellow"
        app:boxStrokeColor="@color/yellow"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_login_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password_hint_login"
            android:importantForAutofill="no"
            android:inputType="textPassword"

            android:shadowColor="@color/yellow"
            android:textColor="@color/yellow"
            android:textColorHint="@color/yellow"
            android:tooltipText="@string/password_hint_login"
            app:boxStrokeColor="@color/yellow" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        android:outlineAmbientShadowColor="@color/yellow"
        android:outlineSpotShadowColor="@color/yellow"

        android:text="@string/login_button_text"
        android:textColor="@color/yellow"
        android:textColorHint="@color/yellow"
        app:boxStrokeColor="@color/yellow" />
</RelativeLayout>